--- a/ReunionMovementDLL/ReunionMovementDLL/ReunionMovementDLL.csproj
+++ b/ReunionMovementDLL/ReunionMovementDLL/ReunionMovementDLL.csproj
@@ -3,10 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <LangVersion>8.0</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Scene\" />
+    <Folder Include="Tests\" />
     <Folder Include="WebRequest\" />
   </ItemGroup>
 
